Redesign: multi-layer pipeline with Kafka, Delta Lake, Argo Workflows, Helm, Prometheus
Applied concepts from all 13 lectures:
- L2: Data Product Canvas (data_product_canvas.md)
- L4: RDD binaryFiles for stateful log parsing → DataFrame handoff
- L5: cache(), Accumulator, BroadcastHashJoin for doc metadata
- L6: Predicate + Projection Pushdown via Delta partitions
- L7: 3-layer Delta architecture (raw/processed/analytics), MERGE INTO, partitionBy
- L8: K8s LimitRange, ResourceQuota, Spark driver/executor requests/limits in Helm
- L9/13: Prometheus Pushgateway for short-lived Spark jobs, alerting rules
- L10: Helm chart, Kustomize dev/prod overlays, GitHub Actions CI/CD
- L11: Argo WorkflowTemplates (spark-job-runner, delta-validator), DAG pipeline
- L12: Kafka producer (acks=all, idempotent, keyed by session_id)